fixed a small <div> closure bug, reformatted the details CSS alignment.

--- a/quotes.css
+++ b/quotes.css
@@ -1,16 +1,15 @@
+/* CSS inspired by madlibs.joelburton.com */
+
 body {
-    background-color: #2c3e4f;  /* dark blue */
-    background-color: #cc6600; /* dark orange*/
-    background-color: #333333;
+    background-color: #333333; /* dark grey */
     color: white;
     font-family: "Helvetica Neue", sans-serif;
-
     font-weight: 200;
     padding: 2em;
 }
 
 h1 {
-  font-family: 'Lobster', cursive;
+    font-family: 'Lobster', cursive;
     font-weight: 200;
     font-size: 400%;
     margin-top: 0;
@@ -33,9 +32,7 @@ select {
 }
 
 button {
-  background-color: #0c1e2f;  /* very dark blue */
-  background-color: #663300; /* brown */
-  background-color: #666666;
+  background-color: #666666; /* medium grey */
   color: white;
   border-radius: 10px;
   border: solid 1px white;
@@ -61,23 +58,25 @@ a:link {
 #result {
     position: absolute;
     top: 20%;
-    left: 40%;
+    left: 240px;
     margin-right: 30px;
-    border-left: solid 5px #4c5e6f;   /* medium-blue */
-    border-left: solid 5px #FFCC99;
-    border-left: solid 5px #cccccc;
+    border-left: solid 5px #cccccc; /* light grey */
     padding-left: 1em;
     margin-left: 0;
-    /*width: 400px;*/
-
+    max-width: 400px;
 }
 
 #episode {
     font-style: italic;
 }
 
+#details {
+    margin-top: 40px;
+    text-align: right;
+}
+
 #source {
-    margin: 30px;
+    margin-top: 40px;
     text-align: right;
 }
 
@@ -87,5 +86,4 @@ a:link {
     text-align: center;
     position: fixed;
     bottom: 10px;
-    /*width: 100%;*/
 }
